# Frillshark

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CppGen.cpp  CppGen.hpp  Frillshark.cpp  MainWindow.cpp  MainWindow.glade  MainWindow.hpp  README.md  SqliteShark.hpp  bld.sh  stdafx.hpp
example/: CMakeLists.txt  Howtouseclass_main.cpp  odbccommon_testdb.hpp  ootabe.hpp  testdb.hpp
resources/: odbccommon.hpp
